@@ -8,6 +8,7 @@ http://semantic-mediawiki.org/wiki/Semantic_Result_Formats
 * Dropped support for MediaWiki 1.15.x and SMW < 1.7.
 * Added warning icon with tooltip to jqplotpie shown when there are no results instead of a non-working chart.
 * Added value distribution support to jqplotpie and jqplotbar.
+* Added min parameter to jqplotbar to set the minimun value for the Y-axis.
 
 New formats in this version are:
 * valuerank (written by DaSch)
